--- a/css/style.scss
+++ b/css/style.scss
@@ -1858,7 +1858,7 @@ footer {
 
 @media screen and (max-width:770px) {
     .account-section {
-        height: 100vh;
+        height: auto;
         margin: 30px 0;
 
         .asection {
